--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     .tLink { fonct-color:pink;}
     .crimson {color:crimson;}
 
-
-
     </style>
   </head>
   <body>
@@ -63,10 +61,16 @@
     <a onClick="setBookmark(_G.current_path)" href="javascript:void(0)">bm</a>
     <a onClick="openFinder(_G.current_path)" href="javascript:void(0)">finder</a>
     <a onClick="setDirSize(_G.current_path)" href="javascript:void(0)">size</a><span id="dir_size" class="bold s150 gray"></span>
-
     <span id="current_action" class="crimson">
       <a onClick="toggleNew('toggle')" href="javascript:void(0)">new</a>
     </span>
+
+    <span  class="crimson">
+      <a onClick="$('#command').slideToggle(10)" href="javascript:void(0)">command</a>
+    </span>
+
+
+
     <br/>
     <div id="new_action"  style="display:none;">
         <a id="new_file" onClick="makeFile('aaaa.txt' )" href="javascript:void(0);" class="s150">file </a>
@@ -77,6 +81,14 @@
         <input id="filter" type="text" class="" size=15 placeholder="filter">
         <input id="grep_filter" type="text" class="" size=15 placeholder="grep">
     </div>
+
+    <div id="command" class="hide">
+        <input id="command_str" type="text" class="" size="60" onKeyUp="
+        osRunOut($(this).val(),'command_out','replace')
+        " placeholder="command_str">
+        <div id="command_out" ></div>
+    </div>
+
     <span id="filter_shell" ></span>
     <br/>
     file<span id="file_count"></span>
@@ -86,8 +98,6 @@
 
         <table><tr>
         <td id="file_list" path="" width=50% valign=top >
-
-
 
         </td>
         <td path="" width=50% valign=top   >
