--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
                     <div id="file_contents"></div>
 
                 </div>
+                <div id="debug"></div>
 
             </td>
         </tr></table>
